--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
   "devDependencies": {
     "mocha": "^1.21.4",
     "request": "^2.34.0",
-    "chai": "^1.9.0"
+    "chai": "^1.9.0",
+    "nodemon": "~1.2.1",
+    "node-inspector": "~0.7.4"
+  },
+  "dependencies": {
+    "lodash": "~2.4.1",
+    "fs": "0.0.2",
+    "path": "~0.4.9",
+    "events": "~1.0.2",
+    "url": "~0.10.1"
   }
 }
